@@ -29,7 +29,7 @@
 
        <div class="topnav" id="myTopnav">
 
-       <a href="{% url 'index' %}">Home</a>
+       <a href="{% url 'index' %}"><i class="fa fa-home"></i> Home</a>
           <a href="{% url 'profile' %}">Profile</a>
           {% if user.is_authenticated %}
               <a href="{% url 'logout' %}">Logout</a>
