@@ -1,8 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class = "classList">
-        {% for course in  user.courses.all %}
-            <a href="{% url 'course_page' id=course.id%}"> <span>{{ course.course_name }} </span></a>
-        {%  endfor %}
+    <div class="row">
+        <div class = "classList main w3-animate-opacity">
+            {% for course in  user.courses.all %}
+                <a href="{% url 'course_page' id=course.id%}"> <span>{{ course.course_name }} </span></a>
+            {%  endfor %}
+        </div>
+    <div class="side w3-center w3-animate-right">
+        <h2>TITLE HEADING</h2>
+        <h5>Title description, Dec 7, 2017</h5>
+        <div class="fakeimg" style="height:200px;">Image</div>
+        <p>Some text..</p>
+        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <div class="fakeimg" style="height:200px;">Image</div>
+  </div>
     </div>
 {% endblock content %}
