@@ -70,21 +70,17 @@ footer{
     text-align: center;
 }
 
-#titlebar a:link, a:visited {
+.logo a:link, a:visited {
   color: #eaeaea;
 }
 
 #titlebar a:hover, a:active{
   color: #3d3d3d;
 }
+
 .topnav a:hover {
   background-color: #ddd;
-  color: rgba(80, 82, 79, 0.93);
-}
-
-.active {
-  background-color: #4CAF50;
-  color: white;
+  color: rgba(80, 82, 79, 0. 93);
 }
 
 .topnav .icon {
@@ -215,4 +211,50 @@ form #submit {
 .classList a:hover span:after {
   opacity: 1;
   right: 0;
+}
+
+ul.errorlist.nonfield {
+    list-style-type: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: #703092;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
